# jpeg_watermark

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
client/include/: client.hpp  request.hpp
client/src/: client.cpp  main.cpp
common/: image.hpp  io_service.hpp  protocol.hpp  timer.hpp
libs/: CMakeLists.txt
libs/CImg/: README.txt
libs/CImg/examples/: use_jpeg_buffer.cpp
libs/easylogging/: CMakeLists.txt
server/: CMakeLists.txt
server/include/: image_processor.hpp  limits.hpp  server.hpp  service.hpp  session.hpp  session_manager.hpp  task.hpp  threadpool.hpp  worker_pool.hpp
server/include/session/: session.hpp  session_proto.hpp
server/include/task/: invoker.hpp  task.hpp  watermark_task.hpp
server/src/: image_processor.cpp  main.cpp  server.cpp  service.cpp  session.cpp  session_manager.cpp  session_proto.cpp  task.cpp  threadpool.cpp  watermark_task.cpp  worker_pool.cpp
